# quantmind

./: .env.example  .gitignore  ABOUT.md  Makefile  README.md  dvc.yaml  latest.md  params.yaml  pyproject.toml  requirements.txt  updates.md
.github/workflows/: ci.yml
.streamlit/: config.toml
configs/: backtest.yaml  data_sources.yaml  features.yaml  models.yaml
configs/profiles/: live.yaml  paper.yaml  research.yaml  testnet.yaml
docker/: docker-compose.yml
docs/: architecture.md
notebooks/: 01_research_template.ipynb  02_feature_analysis.ipynb
scripts/: download_data.py  setup_db.py
src/: __init__.py  cli.py
src/backtest/: __init__.py  engine.py  metrics.py  portfolio.py
src/core/: __init__.py  config.py  database.py  events.py  logger.py  types.py
src/dashboard/: __init__.py  app.py  theme.py
src/data/: __init__.py  pipeline.py  quality.py  validators.py
src/data/providers/: __init__.py  base.py  binance.py  fear_greed.py  yahoo.py
src/execution/: __init__.py  broker.py  orchestrator.py
src/features/: __init__.py  microstructure.py  registry.py  selection.py  sentiment.py  statistical.py  store.py  technical.py
src/models/: __init__.py  base.py  cross_validation.py  explainability.py  leaderboard.py  monitoring.py  trainer.py
src/models/classifiers/: __init__.py  deep_learning.py  gradient_boost.py  tft.py
src/models/regime/: __init__.py  clustering.py  hmm.py
src/portfolio/: __init__.py  circuit_breaker.py  optimizer.py  risk_engine.py
src/research/: __init__.py  registry.py
src/rl/: __init__.py  rewards.py
src/rl/agents/: __init__.py  ppo_agent.py
src/rl/env/: __init__.py  trading_env.py
src/strategy/: __init__.py  genetic.py  templates.py
tests/: __init__.py  conftest.py  test_backtest.py  test_core.py  test_data.py  test_execution.py  test_features.py  test_models.py  test_portfolio.py  test_rl.py  test_roadmap.py
