[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantmind"
version = "0.1.0"
description = "Personal Institutional-Grade Systematic Trading & Research Lab"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Riza Wahyu Nugraha"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # Core
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "structlog>=23.0",
    "click>=8.0",

    # Data
    "pandas>=2.0",
    "numpy>=1.24",
    "ccxt>=4.0",
    "yfinance>=0.2",
    "requests>=2.31",
    "aiohttp>=3.9",

    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.12",

    # Feature Engineering
    "pandas-ta>=0.3",
    "scipy>=1.11",

    # Visualization
    "plotly>=5.18",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "shap>=0.43",
    "torch>=2.1",
    "pytorch-forecasting>=1.0",
]
rl = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.2",
    "sb3-contrib>=2.2",
    "tensorboard>=2.15",
]
backtest = [
    "vectorbt>=0.26",
]
portfolio = [
    "riskfolio-lib>=6.0",
    "pypfopt>=1.5",
    "cvxpy>=1.4",
]
execution = [
    "redis>=5.0",
]
dashboard = [
    "streamlit>=1.29",
    "dash>=2.14",
]
tracking = [
    "mlflow>=2.9",
    "dvc>=3.30",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "mypy>=1.7",
    "ruff>=0.1",
    "pre-commit>=3.6",
    "ipykernel>=6.27",
]
all = [
    "quantmind[ml,rl,backtest,portfolio,execution,dashboard,tracking,dev]",
]

[project.scripts]
quantmind = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
